tests/baselines/reference/unicodeExtendedEscapesInStrings17(target=es5).errors.txt
unicodeExtendedEscapesInStrings17.ts(1,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInStrings17.ts(1,18): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInStrings17.ts(1,23): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInStrings17.ts (3 errors) ====
    var x = "\u{r}\u{n}\u{t}";
                
!!! error TS1125: Hexadecimal digit expected.
                     
!!! error TS1125: Hexadecimal digit expected.
                          
!!! error TS1125: Hexadecimal digit expected.
    